# strategy2d

./: .gitignore  .gitmodules  CMakeLists.txt  MPQ_Export.md  README.md
editor/: CMakeLists.txt
editor/include/: context.h  editor.h  input.h  menu.h  menus.h  tools.h
editor/src/: context.cpp  editor.cpp  input.cpp  main.cpp  menu.cpp  menus.cpp  tools.cpp
engine/: CMakeLists.txt  engine_config.h.in
engine/include/engine/: engine.h
engine/include/engine/core/: animator.h  audio.h  cursor.h  framebuffer.h  gui.h  gui_action_buttons.h  input.h  palette.h  quad.h  renderer.h  selection.h  shader.h  sprite.h  text.h  texture.h  window.h
engine/include/engine/game/: app.h  camera.h  command.h  config.h  controllers.h  faction.h  gameobject.h  level.h  map.h  object_data.h  object_parsing.h  object_pool.h  player_controller.h  resources.h  scenario.h  techtree.h  utility_handlers.h
engine/include/engine/utils/: dbg_gui.h  generator.h  gl_error.h  gui.h  json.h  keycodes.h  log.h  mathdefs.h  pool.hpp  pool.inc  randomness.h  ring_buffer.hpp  setup.h  timer.h  utils.h
engine/src/: animator.cpp  app.cpp  audio.cpp  camera.cpp  command.cpp  config.cpp  controllers.cpp  cursor.cpp  dbg_gui.cpp  faction.cpp  framebuffer.cpp  gameobject.cpp  generator.cpp  gl_error.cpp  gui.cpp  gui_action_buttons.cpp  input.cpp  json.cpp  level.cpp  log.cpp  map.cpp  mathdefs.cpp  object_data.cpp  object_parsing.cpp  object_pool.cpp  palette.cpp  player_controller.cpp  quad.cpp  randomness.cpp  renderer.cpp  resources.cpp  scenario.cpp  selection.cpp  shader.cpp  sprite.cpp  stb_image.cpp  techtree.cpp  text.cpp  texture.cpp  texture_merging.cpp  (+3 more)
game/: CMakeLists.txt
game/include/: game.h  ingame.h  intro.h  menu.h  recap.h  resources.h  stage.h
game/src/: game.cpp  ingame.cpp  intro.cpp  main.cpp  menu.cpp  recap.cpp  resources.cpp  stage.cpp
res/campaign/: hu_00.json  hu_01.json  oc_00.json  oc_01.json
res/campaign/maps/: hu_00.json  hu_01.json  hu_02.json  oc_00.json  oc_01.json
res/json/: buildings_index.json  cursors.json  index.json  objects.json  research.json  spells.json  spritesheets.json  utility.json
res/json/objects/buildings/: aviary.json  barracks.json  blacksmith.json  church.json  farm.json  foundry.json  inventor.json  lumber_mill.json  mage_tower.json  neutral.json  oil_platform.json  refinery.json  shipyard.json  stables.json  tower.json  town_hall.json
res/json/objects/units/: archer.json  ballista.json  battleship.json  demosquad.json  destroyer.json  footman.json  gryphon.json  knight.json  mage.json  misc.json  other.json  peasant.json  roflcopter.json  submarine.json  tanker.json  transport.json
res/json/spritesheets/: troll.json
res/json/spritesheets/hu/: archer.json  ballista.json  battleship.json  buildings_summer.json  buildings_winter.json  demo_squad.json  destroyer.json  footman.json  gryphon.json  knight.json  machine.json  mage.json  peasant.json  submarine.json  tanker.json  transport.json
res/json/spritesheets/misc/: buildings.json  corpses.json  daemon.json  effects.json  icons.json  pig.json  seal.json  sheep.json  skeleton.json
res/json/spritesheets/oc/: buildings_summer.json  buildings_winter.json  catapult.json  death_knight.json  destroyer.json  dragon.json  grunt.json  juggernaut.json  ogre.json  peon.json  sappers.json  tanker.json  transport.json  troll.json  turtle.json  zeppelin.json
res/json/tilemaps/: summer.json  summer2.json  summer3.json  winter.json
res/maps/: cramped.json  dark_paths.json
res/saves/: AJJ.json  CHUJA.json  all.json
res/shaders/: cycling_shader.frag  cycling_shader.vert  test_shader.frag
sandbox/: CMakeLists.txt
sandbox/include/: sandbox.h
sandbox/src/: main.cpp  sandbox.cpp
scripts/: merge_object_jsons.py  merge_spritesheet_jsons.py
scripts/sprite_anims/: check_cut.py  cut.py  extend.py  fill_bg.py  gen_sprites.py  move_rectangle.py  readme.txt  swap_rows.py  viz_gen.py  write_json.py
scripts/sprite_colors/: highlight_colors.py  modify_colors.py  print_colors.py  readme.txt  test_colors.py
scripts/tileset_description/: borders_check.py  edit_borders.py  edit_types.py  generate.py  readme.txt
